--- a/backend/apps/docs/templates/swagger-ui.html
+++ b/backend/apps/docs/templates/swagger-ui.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="//unpkg.com/swagger-ui-dist@3/swagger-ui.css" />
   </head>
   <body>
+    <div>
+    {% if user.is_active %}
+      <p>Welcome, {{ user.id }}. <a href="/api/auth/logout">log-out</a></p>
+    {% else %}
+      <p>Welcome, stranger. Please <a href="/api/auth/login">log-in</a><br></p>
+    {% endif %}
+    <p>Or, view admin page <a href='/admin'>here</a></p>
+    </div>
     <div id="swagger-ui"></div>
     <script src="//unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js"></script>
     <script>
