display displayname instead of id on docs page

--- a/backend/apps/docs/templates/swagger-ui.html
+++ b/backend/apps/docs/templates/swagger-ui.html
@@ -9,7 +9,7 @@
   <body>
     <div>
     {% if user.is_active %}
-      <p>Welcome, {{ user.id }}. <a href="/api/auth/logout">log-out</a></p>
+      <p>Welcome, {{ user.displayName }}. <a href="/api/auth/logout">log-out</a></p>
     {% else %}
       <p>Welcome, stranger. Please <a href="/api/auth/login">log-in</a><br></p>
     {% endif %}
