--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -6,21 +6,6 @@ body {
     box-sizing: border-box;
   }
 
-  .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-  }
-
-  .header {
-    background-color: teal;
-    color: white;
-    text-align: center;
-    padding: 10px;
-  }
-
   .row {
     display: flex;
     flex: 1;
@@ -30,27 +15,18 @@ body {
   }
 
   .column {
-    flex-basis: 25%;
-    padding: 10px;
     text-align: center;
     flex-grow: 1;
     flex-shrink: 0;
   }
 
-  .center {
-    flex-basis: 50%;
-    border-left: 1px solid #333333;
-    border-right: 1px solid #333333;
+  .left {
+    flex-basis: 30%;
   }
 
-  .footer {
-    background-color: teal;
-    color: white;
-    text-align: center;
-    position: sticky;
-    bottom: 0;
-    margin-top: auto;
-    width: 100%;
+  .right {
+    flex-basis: 70%;
+    border-left: 1px solid #333333;
   }
 
   @media screen and (max-width: 768px) {
@@ -58,7 +34,7 @@ body {
       flex-basis: 50%;
     }
 
-    .center {
+    .right {
       flex-basis: 100%;
     }
   }
