--- a/backend/apps/authors/templates/login.html
+++ b/backend/apps/authors/templates/login.html
@@ -10,7 +10,7 @@
           <div>
             {% block branding %}<h3 style="margin: 0 0 20px;">Django REST framework</h3>{% endblock %}
           </div>
-        </div><!-- /row fluid -->
+        </div>
 
         <div class="row-fluid">
           <div>
@@ -58,9 +58,9 @@
               </div>
             </form>
           </div>
-        </div><!-- /.row-fluid -->
-      </div><!--/.well-->
-    </div><!-- /.row-fluid -->
-  </div><!-- /.container-fluid -->
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 {% endblock %}
